# curate-oslo

./: Cargo.toml  Containerfile
public/: index.html  main.js  model.mtl  upload.html
public/styles/: styles.css
public/upload/: index.html
src/: main.rs
wasm-frontend/: Cargo.toml
wasm-frontend/src/: lib.rs  upload.rs
