[package]
name = "curate-oslo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.7.9", features=["multipart"]}
hyper = "1.5.1"
mio = "1.0.3"
serde = {version="1.0.216", features=["derive"]}
tokio = { version="1.42.0", features=["full"]}
tokio-util = { version="0.7.13", features=["io"]}
tower = "0.5.1"
tower-http = { version="0.6.2", features=["limit","cors","fs"]}
