[package]
name = "wasm-frontend"
version = "0.1.0"
authors = ["markussigurbjornsson <markussigurbjorns@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-futures = "0.4.49"

[dependencies.web-sys]
version = "0.3.4"
features = ["Window", "Document", "HtmlElement", "HtmlFormElement", "HtmlInputElement", "FormData", "FileList", "File", "Event", "EventTarget", "console", "RequestInit", "Response"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
